# wolf-creek-pass

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  PROGRESS.md  README.md  REQUIREMENTS.md  analyze.py  docker-compose.yml  export.py  handler.py  main.py  models.py  pyproject.toml  query_data.py  route.py  settings.py  storage.py  traffic_cam_monitor.py  udot.py
frontend/: env.d.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: base.css  main.css
frontend/src/components/: CameraCard.vue  ConditionBadge.vue  CycleSelector.vue  LoginScreen.vue  MetricRangeBar.vue  ReolinkCameraCard.vue  ReolinkSection.vue  ReolinkTimeSlider.vue  RouteMap.vue  RouteSelector.vue  RouteSummary.vue  SensorCard.vue  SensorPushSection.vue  SparklineChart.vue
frontend/src/composables/: useApi.ts  useAuth.ts  useReolinkApi.ts
frontend/src/stores/: cycle.ts  reolink.ts  sensorpush.ts
frontend/src/types/: index.ts  reolink.ts  sensorpush.ts
frontend/src/utils/: time.ts
frontend/src/views/: HomeView.vue
infra/: app.py  cdk.json
infra/infra/: infra_stack.py
reolink_api/: handler.py  serve_local.py
tests/: conftest.py  test_analyze.py  test_export.py  test_models.py  test_route.py  test_storage.py  test_udot.py
